# dmanage

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml
docs/source/: conf.py  gettingStarted.rst  glossary.rst  index.rst  intro.rst  parallelize.rst  spelling_wordlist.txt  tutorials.rst  usage.rst
docs/source/api/: dmanage.components.rst  dmanage.components.vsim.rst  dmanage.dfmethods.rst  dmanage.drivers.rst  dmanage.methods.rst  dmanage.rst  dmanage.utils.rst  modules.rst
docs/source/concepts/: concepts.rst  dataFiles.rst  dataHierarchy.rst  dfmethods.rst  metadata.rst  projectStructure.rst  server.rst
docs/source/concepts/cacheingData/: cacheingData.rst
docs/source/concepts/dataHierarchy/: components.rst  dataHierarchy.rst  datagroup.rst  dataunit.rst
docs/source/concepts/pandas/: pandas.rst
docs/source/concepts/refactoringData/: refactoringData.rst
docs/source/development/: development.rst  environments.rst  todo.rst
docs/source/development/contribution/: contribution.rst  standards.rst
docs/source/development/documentation/: documentation.rst  standards.rst
docs/source/figures/diagrams/: .~lock.dataHierarchy2.odg#  dataHierarchy.odg  dataHierarchy2.odg
docs/source/notebooks/: dataHierarchy.ipynb  parallelize.ipynb
docs/source/resources/: resources.rst
docs/source/tutorials/: tutorials.rst
docs/source/tutorials/notebooks/: dataHierarchy.ipynb  parallelize.ipynb
docs/source/tutorials/notebooks/cacheing/: softCache.ipynb
docs/source/tutorials/notebooks/dataHierarchy/: dataHierarchy.rst  intro.ipynb  plotting.ipynb
docs/source/tutorials/notebooks/dfmethods/: coordinateSystems.ipynb  dfmethods.rst  plot.ipynb
examples/cacheing/: hardCacheing.py  softCacheing.py
examples/simpleHierarchy/: simpleHierarchy.py
src/dmanage/: __init__.py  base.py  combine.py  components.py  dataBase.py  dataDir.py  dataGroup.py  dataUnit.py  decorate.py  group.py  parallel.py  plugins.py  sweepDir.py  unit.py
src/dmanage/components/: __init__.py  cache.py  icepic.py  loader_cst.py  mail.py  vsim.py
src/dmanage/components/vsim/: vsim.py
src/dmanage/dfmethods/: __init__.py  convert.py  fft.py  functions.py  helper.py  plot.py  process.py  signal.py  vector.py  wrapper.py
src/dmanage/dispatch/: dispatch.py
src/dmanage/drivers/: vsim.py
src/dmanage/file/: __init__.py  h5backend.py
src/dmanage/loaders/: VsHdf5.py  icepic.py  vsim.py
src/dmanage/metadata/: __init__.py  metastring.py
src/dmanage/methods/: __init__.py  fft.py  functions.py  vector.py  wrapper.py
src/dmanage/ops/arrays/: __init__.py  functions.py  signal.py
src/dmanage/ops/backends/pandas/: convert.py  fft.py  helper.py  linalg.py  plot.py  signal.py  vector.py  wrapper.py
src/dmanage/ops/dfmethods/: __init__.py  convert.py  fft.py  helper.py  linalg.py  plot.py  signal.py  vector.py  wrapper.py
src/dmanage/plugins/visit/: VSimMacros.py
src/dmanage/plugins/vsim/: __init__.py  driver.py
src/dmanage/plugins/vsim/loader/: loader.py
src/dmanage/remote/: rpc.py  rpc_old.py  ssh.py  sync.py
src/dmanage/server/: basic.py  rpc.py  ssh.py
src/dmanage/strata/: __init__.py  decorate.py  group.py  helpers.py  unit.py
src/dmanage/strata/components/: cache.py
src/dmanage/strata/metadata/: metastring.py
src/dmanage/tools/: cache.py
src/dmanage/utils/: combine.py  constants.py  mail.py  objinfo.py  parser.py  sigbind.py  system.py  utils.py
templates/: simple.py
templates/simulation/analysis/: analyzeGroup.py  analyzeUnit.py
templates/simulation/core/: dataGroup.py  dataUnit.py
templates/simulation/jobSubmit/: jobSubmit.py
templates/simulation/products/: plotForPublish.py
templates/simulation/tests/: test_dataGroup.py  test_dataUnit.py
tests/: testObjects.py  test_components.py  test_dataBase.py  test_dataDir.py  test_dataGroup.py  test_dataHierarchy.py  test_dataUnit.py  test_dfmethods.py  test_loaders.py  test_plugins.py  test_rpc.py  test_sweepDir.py
tests/L-4953/: test_basic.py  test_dataDir.py  test_jobSubmit.py  test_sweepDir.py
tests/test_concepts/: test_ParallelIterativeWraper.py  test_autoParallel.py  test_classComps.py
tests/test_concepts/test_mdao/: test_mdao_optimize.py  test_mdao_run.py
tests/test_concepts/test_mdao/cfa/: test_mdao_optimize.py  test_mdao_run.py
tests/test_concepts/test_mdao/paraboloid/: optimize.py
tests/test_rpc/test_pyro/component_access/: Readme.txt  client.py  server.py
tests/test_rpc/test_pyro/serialization/: client.py  server.py
tests/test_rpc/test_pyro/test_project/: project.py  project_old.py
tests/test_simpleHierarchy/: test_simpleHierachy.py
tutorials/: composeH5.py  myComposeH5.py
