
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata] 
allow-direct-references = true

[project]
name = "dmanage"
version = "0.0.1"
authors = [
  { name="Marcus Pearlman", email="***REMOVED***@***REMOVED***.edu" },
]
description = "A package for generating, organizing, and processing data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]



dependencies = [
  "tabulate",          # For generate text charts on plots?
  "scipy",             # filter options
  "natsort",           # for numerically sorting of filenames 
  "python-xlib",       # ?
  "tables",            # for h5 file reading and writing
  "numpy",             # data manipulation
  "pandas",            # data manipulation
  "matplotlib",        # for plotting
  "multiprocess",      # for multiprocessing with dill instead of pickle, can multiprocess function wrappers
  # "Pyro5",             # RPC remote implementation
]

[project.optional-dependencies]
Pyro5 = ["Pyro5@git+https://github.com/pearlmam/Pyro5.git"]
paramiko=["paramiko"]
zarr = ["zarr"]
xarray = ["xarray"]
openpyxl = ["openpyxl"]          # for pandas excel functionality

hardcache = ["xarray","zarr"]
remote = ["Pyro5@git+https://github.com/pearlmam/Pyro5.git", "paramiko"]



all = ["Pyro5@git+https://github.com/pearlmam/Pyro5.git",
       "paramiko",
       "xarray",
       "zarr",
       "openpyxl",
]

# unused dependances to be used
#  "dask", 
#  "openmdao",
#  "hvplot", 
#  "seaborn", 
#  "rpyc"               # or equivalent



# for documentation
#  nbconvert[webpdf]       # notebooks
#  nbsphinx                # notebooks
#  jupyter                 # notebooks
#  pandoc                  # might need sudo apt-get install pandoc
#  sphinx                  # sphinx
#  sphinx_rtd_theme        # sphinx theme
#  sphinx-rtd-dark-mode    # dark mode extension for sphinx_rtd_theme
#  sphinx-apidoc           # automatically generate documentation
#  sphinxcontrib-spelling  # spell check

# for plotting interactive
#  PyQt5                  # plotting qt


# Depriciated
#  "pathos",            # for multiprocessing with dill instead of pickle, can multiprocess function wrappers

[project.scripts]
dmanage-factory = "dmanage.remote.rpc:main"

[project.urls]
Homepage = "https://github.com/pearlmam/dmanage/"
Issues = "https://github.com/pearlmam/dmanage/issues"
