
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata] 
allow-direct-references = true

[project]
name = "dmanage"
version = "0.0.2"
authors = [
  { name="Marcus Pearlman", email="marcuspearlman@boisestate.edu" },
]
description = "A package for generating, organizing, and processing data."
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "natsort",           # for numerically sorting of filenames 
  "scipy",             # filter options
  "numpy",             # data manipulation
  "pandas",            # data manipulation
  "matplotlib",        # for plotting
  "tabulate",          # For generate text charts on plots?
]

[project.optional-dependencies]

#### DataFrame packages
# pandas = ["pandas"]             # pandas DataFrames
polars = ["polars"]               # polars DataFrames
xarray = ["xarray"]               # xarray is like a dataframe

#### remote packages
remote = ["Pyro5@git+https://github.com/pearlmam/Pyro5.git", "paramiko"]
Pyro5 = ["Pyro5@git+https://github.com/pearlmam/Pyro5.git",]    # for rpc functionality
paramiko=["paramiko",]            # ssh functionality
xlib = ["python-xlib",]           # for ssh and passing x, currently not woking

#### file related packages
zarrcache = ["xarray","zarr",]           # for reading/writing zarr files
parquetcache = ["fastparquet",]          # reading/writing parquet files
cache = ["xarray","zarr","fastparquet",] # all cache
h5py = ["h5py",]                         # for reading/writing h5 files
tables = ["tables",]                     # for reading/writing h5 files, alternate
openpyxl = ["openpyxl",]                 # for pandas excel functionality

#### processing
dill = ["multiprocess",]                 # for dill multiprocessing

#### dmanage derived packages
vsim = ["dmanage-vsim@git+https://github.com/pearlmam/dmanage-vsim.git",]

all = ["Pyro5@git+https://github.com/pearlmam/Pyro5.git",
       "paramiko",
       "xarray",
       "zarr",
       "fastparquet",
       "tables",
       "h5py",
       "multiprocess",
]

docs = ["nbconvert[webpdf]",      # notebooks
       "nbsphinx",                # notebooks
       "nbformat",
       "ipykernel",
       "sphinx",                  # sphinx
       "sphinx_rtd_theme",        # sphinx theme
       "sphinx-rtd-dark-mode",    # dark mode extension for sphinx_rtd_theme
       "sphinxcontrib-spelling",  # spell check
]

dev = [
    "pytest",
]

# docs may need this      "jupyter-client"

### for development of docs
# "sphinx-apidoc",           # automatically generate documentation
# "jupyter",                 # notebooks

# unused dependances to be used
#  "dask", 
#  "openmdao",
#  "hvplot", 
#  "seaborn", 

# for plotting interactive
#  PyQt5                  # plotting qt


[project.scripts]
dmanage-factory = "dmanage.remote.rpc:main"

[project.urls]
Homepage = "https://github.com/pearlmam/dmanage/"
Issues = "https://github.com/pearlmam/dmanage/issues"
